--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "rmlst" %}
-{% set version = "0.0.1" %}
+{% set version = "0.0.4" %}
 
 package:
   name: "{{ name | lower }}"
@@ -8,7 +8,7 @@ package:
 source:
   # Example: Download the source tarball from GitHub.
   url: https://github.com/ssi-dk/rmlst/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: f6601bb59940d876cbfa0f5f838f30fd5131bd5d8a05028ea5b16cec4c95788e
+  sha256: 0a940335964bc31fc76c70b67728f5e6912c7aa0aceaf3cc4643c89b27c50859
 
 build:
   number: 0
@@ -21,7 +21,7 @@ requirements:
 
 test:
   commands:
-    - rmlst
+    - rmlst -h
 
 about:
   home: https://github.com/ssi-dk/{{ name }}
